[package]
name = "get_dir"
version = "0.4.0"
authors = ["Alpheus Tang"]
edition = "2024"
rust-version = "1.85.0"
description = """
An utility to get directory
"""
readme = "README.md"
homepage = "https://github.com/alpheustangs/get_dir.rs"
repository = "https://github.com/alpheustangs/get_dir.rs"
license = "MIT"
keywords = [
    "get_dir",
    "dir",
    "directory",
    "fs",
    "util",
]
categories = [
    "filesystem"
]
include = [
    "src/*", 
    "Cargo.toml",
    "README.md",
]

[package.metadata.docs.rs]
features = ["all"]

[lib]
name = "get_dir"
path = "src/lib.rs"

[dependencies.async-std]
workspace = true
optional = true

[dependencies.tokio]
version = "^1.43.0"
optional = true
features = ["fs", "io-util"]

[features]
default = []
async-std = ["dep:async-std"]
async_std = ["async-std"]
tokio = ["dep:tokio"]
all = ["async-std", "tokio"]
