[package]
name = "get_dir"
version = "0.4.3"
authors = ["Alpheus <contact@alphe.us>"]
edition = "2024"
rust-version = "1.85.0"
description = """
A utility to get directory
"""
readme = "README.md"
homepage = "https://github.com/alpheusday/get_dir.rs"
repository = "https://github.com/alpheusday/get_dir.rs"
license = "MIT"
keywords = [
    "get_dir",
    "dir",
    "directory",
    "fs",
    "util",
]
categories = [
    "filesystem"
]
include = [
    "src/*", 
    "Cargo.toml",
    "README.md",
]

[package.metadata.docs.rs]
features = ["all"]

[dependencies.async-std]
workspace = true
optional = true

[dependencies.smol]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true
features = ["fs", "io-util"]

[features]
default = []
async_std = ["dep:async-std"]
async-std = ["async_std"]
smol = ["dep:smol"]
tokio = ["dep:tokio"]
all = ["async_std", "smol", "tokio"]
