[package]
name = "tests"
edition = "2024"
publish = false

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
get_dir = { workspace = true }
macro_rules_attribute = "~0.2.2"
smol = { workspace = true }
smol-macros = "~0.1.1"
tokio = { workspace = true, features = ["macros", "rt"] }
